fix: dashboard spacing

--- a/services/web-app/components/content-wrapper/content-wrapper.module.scss
+++ b/services/web-app/components/content-wrapper/content-wrapper.module.scss
@@ -21,6 +21,5 @@
 .content-wrapper > *:first-child > *:first-child,
 .content-wrapper > *:first-child > *:first-child > *:first-child,
 .content-wrapper > *:first-child > *:first-child > *:first-child > *:first-child {
-  padding-top: 0;
   margin-top: 0;
 }
